# NuTo_Custom

./: .codecov.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt
ARAMIS/: ARAMIS.geo  ARAMIS.msh  ARAMIS3d.geo  ARAMIS3d.geo.bu  ARAMIS3d.msh  ARAMIS3d_test.geo  ARAMIS3dgrob.geo  ARAMIS3dgrob.msh  Block3d.geo  Block3d.msh  aramis.cpp  aramis3d.cpp  aramis_old.cpp
CreepShrinkage/: 1DCreepShrinkageTest.cpp  1DShrinkageTest.cpp  2DCreepShrinkageTest.cpp  2DCreepShrinkageTest_homogeneous.cpp  2DDamageCreepShrinkage.cpp  3DDamageShrinkage.cpp  3DDamageShrinkage_gmsh.cpp  Cylinder.geo  Cylinder.msh  Mesh1.geo  Mesh1.msh  Meso.geo  Meso.msh  batch_Calc
applications/: ARAMIS2d.geo  ARAMIS3d.geo  ARAMIS3d.msh  ARAMIS3d_coarse.geo  CMakeLists.txt  Cylinder.geo  GradientDamageAramis2d.cpp  GradientDamageCylinder3d.cpp  MoistureDependentCylinderCompression3d.cpp  MoistureTransportCylinder3d.cpp  MultiPhysics3d.cpp  RandomTests.cpp  ShrinkageAramis3d.cpp
scripts/cmake/: AddLib.cmake  AddNuToApp.cmake  AddNuToTest.cmake  IncludeScripts.cmake
src/: CMakeLists.txt
src/integrands/: GradientDamageAdditive.h  MoistureTransport.cpp  MoistureTransport.h  MoistureTransport.inl  MoistureTransportBoundary.cpp  MoistureTransportBoundary.h  MoistureTransportBoundary.inl  MoistureTransportCoefficients.h  MomentumBalanceAdditiveInputOutput.h  MomentumBalanceAdditiveInputOutput.inl  MultiPhysicsMomentumBalance.h  MultiPhysicsMomentumBalance.inl  Shrinkage.h  Shrinkage.inl
src/structures/: MultiPhysicsStructure.cpp  MultiPhysicsStructure.h  MultiPhysicsStructureNew.cpp  MultiPhysicsStructureNew.h
src/tools/: GNUPlot.cpp  GNUPlot.h  IntegrandWrapper.h  PlotData.cpp  PlotData.h  PlotEnum.cpp  PlotEnum.h
tests/: CMakeLists.txt  CellPoint.h  InterpolationPoint.h  MoistureTransport.cpp  MoistureTransport.cpp.autosave  MoistureTransport.h  MoistureTransportTest.h  Shrinkage.cpp  test.cpp
