
ADD_EXECUTABLE(ARAMIS ARAMIS/aramis.cpp)
TARGET_LINK_LIBRARIES(ARAMIS Mechanics Math Base)
IF(ENABLE_VISUALIZE)
    TARGET_LINK_LIBRARIES(ARAMIS Visualize)
ENDIF(ENABLE_VISUALIZE)

ADD_EXECUTABLE(ARAMIS3D ARAMIS/aramis3d.cpp)
TARGET_LINK_LIBRARIES(ARAMIS3D Mechanics Math Base)
IF(ENABLE_VISUALIZE)
    TARGET_LINK_LIBRARIES(ARAMIS3D Visualize)
ENDIF(ENABLE_VISUALIZE)

ADD_EXECUTABLE(1DCreepShrinkageTest CreepShrinkage/1DCreepShrinkageTest.cpp)
TARGET_LINK_LIBRARIES(1DCreepShrinkageTest Mechanics Math Base)
IF(ENABLE_VISUALIZE)
    TARGET_LINK_LIBRARIES(1DCreepShrinkageTest Visualize)
ENDIF(ENABLE_VISUALIZE)

ADD_EXECUTABLE(1DShrinkageTest CreepShrinkage/1DShrinkageTest.cpp)
TARGET_LINK_LIBRARIES(1DShrinkageTest Mechanics Math Base)
IF(ENABLE_VISUALIZE)
    TARGET_LINK_LIBRARIES(1DShrinkageTest Visualize)
ENDIF(ENABLE_VISUALIZE)


ADD_EXECUTABLE(2DCreepShrinkageTest CreepShrinkage/2DCreepShrinkageTest.cpp)
TARGET_LINK_LIBRARIES(2DCreepShrinkageTest Mechanics Math Base)
IF(ENABLE_VISUALIZE)
    TARGET_LINK_LIBRARIES(2DCreepShrinkageTest Visualize)
ENDIF(ENABLE_VISUALIZE)

ADD_EXECUTABLE(2DCreepShrinkageTest_homogeneous CreepShrinkage/2DCreepShrinkageTest_homogeneous.cpp)
TARGET_LINK_LIBRARIES(2DCreepShrinkageTest_homogeneous Mechanics Math Base)
IF(ENABLE_VISUALIZE)
    TARGET_LINK_LIBRARIES(2DCreepShrinkageTest_homogeneous Visualize)
ENDIF(ENABLE_VISUALIZE)

ADD_EXECUTABLE(2DDamageCreepShrinkage CreepShrinkage/2DDamageCreepShrinkage.cpp)
TARGET_LINK_LIBRARIES(2DDamageCreepShrinkage Mechanics Math Base)
IF(ENABLE_VISUALIZE)
    TARGET_LINK_LIBRARIES(2DDamageCreepShrinkage Visualize)
ENDIF(ENABLE_VISUALIZE)

ADD_EXECUTABLE(3DDamageShrinkage CreepShrinkage/3DDamageShrinkage.cpp)
TARGET_LINK_LIBRARIES(3DDamageShrinkage Mechanics Math Base)
IF(ENABLE_VISUALIZE)
    TARGET_LINK_LIBRARIES(3DDamageShrinkage Visualize)
ENDIF(ENABLE_VISUALIZE)

ADD_EXECUTABLE(3DDamageShrinkage_gmsh CreepShrinkage/3DDamageShrinkage_gmsh.cpp)
TARGET_LINK_LIBRARIES(3DDamageShrinkage_gmsh Mechanics Math Base)
IF(ENABLE_VISUALIZE)
    TARGET_LINK_LIBRARIES(3DDamageShrinkage_gmsh Visualize)
ENDIF(ENABLE_VISUALIZE)
